8-Creating-Ingress/manifests/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-clusterip-service
  labels:
    app: mywebapp
spec:
  type: ClusterIP
  selector:
    app: mywebapp
  ports:
    - port: 80
      targetPort: 80
