8-Creating-Ingress/manifests/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-service
spec:  
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mywebapp-clusterip-service
          servicePort: 80
